syntax = "proto2";
option java_package = "com.lemeng.server.command";
option java_outer_classname = "UserCommand";


//cmd：login
//登录请求
message LoginRequestCommand {

    optional string mobile = 1;     //手机号
    optional string password = 2;   //密码
    required int32 type = 3;    //登录类型
    optional string userCode = 4;   //用户编码
}

//手机号注册验证码
//cmd:sendVerifyCode
message SendVerifyCodeRequestCommand {

    required string mobile = 1;
}
//cmd:regist
message RegistRequestCommand {

    required string mobile = 1;
    required string password = 2;
    required string verifyCode = 3;

}

//cmd:loginResult,registResult
//登录响应
message LoginResponseCommand {

    required int32 code = 1;    //1 success 2 fail
    required string msg = 2;
    optional UserInfoCommand userInfo = 3;    //为空则需要初始化玩家
}
//初始化玩家请求
message InitPlayerRequestCommand {
    required string nickname = 1;
    required int32 userId = 2;
}

//初始化玩家响应
message InitPlayerResponseCommand{
    required int32 code = 2;    //1 success 2 fail
    optional string msg = 3;    //例：用户名重复
    optional UserInfoCommand userInfo = 4;    //数据
}

//用户基本信息
//cmd:userInfo
message UserInfoCommand{
    required string mobile = 1;
    required string nickname = 3;
    required int32 level = 4;
    required int32 statue = 5;
    required int32 gemstone = 6;
    required int32 goldCoin = 7;

    repeated string petList = 11;
    repeated string skillList = 12;
    repeated string footPrintList = 13;
}


